CHANGE en el index

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p>25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/RETRO/LA LIGA/ATLÉTICO DE MADRID/HOME 2004-05.jpeg" alt="Camiseta más vendida 4">
+                <img src="Imagenes/RETRO/LA LIGA/ATLÉTICO DE MADRID/HOME 2004-05.jpeg" alt="ATM 04-05">
                 <h3>Atlético de Madrid 04/05 HOME</h3>
                 <p>25€</p>
             </div>
