--- a/RetroBundesliga.html
+++ b/RetroBundesliga.html
@@ -13,7 +13,7 @@
 
     <nav>
         <ul>
-            <li><a href="inicio.html">INICIO</a></li>
+            <li><a href="index.html">INICIO</a></li>
 
             <li class="menu-item dropdown">
                 <a href="#">ACTUAL</a>
