--- a/Premier.html
+++ b/Premier.html
@@ -94,7 +94,7 @@
             <h3>Arsenal</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Arsenal/HOME.jpg" alt="Camiseta Arsenal Local">
+                    <img src="Imagenes/PREMIER LEAGUE/Arsenal/HOME.jpeg" alt="Camiseta Arsenal Local">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
