--- a/Premier.html
+++ b/Premier.html
@@ -94,12 +94,12 @@
             <h3>Arsenal</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Arsenal/HOME.jpeg" alt="Camiseta Arsenal Local">
+                    <img src="Imagenes/PREMIER LEAGUE/ARSENAL/HOME.jpeg" alt="Camiseta Arsenal Local">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Arsenal/AWAY.jpg" alt="Camiseta Arsenal Visitante">
+                    <img src="Imagenes/PREMIER LEAGUE/ARSENAL/AWAY.jpg" alt="Camiseta Arsenal Visitante">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
