--- a/LaLiga.html
+++ b/LaLiga.html
@@ -93,17 +93,17 @@
             <h3>Deportivo Alavés</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Alavés/HOME.jpg" alt="Camiseta Deportivo Alavés">
+                    <img src="Imagenes/LALIGA/Alaves/HOME.jpg" alt="Camiseta Deportivo Alavés">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Alavés/AWAY.jpg" alt="Camiseta Deportivo Alavés">
+                    <img src="Imagenes/LALIGA/Alaves/AWAY.jpg" alt="Camiseta Deportivo Alavés">
                     <h4>Camiseta Visitante</h4>
                     <p>23€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Alavés/THIRD.jpg" alt="Camiseta Deportivo Alavés">
+                    <img src="Imagenes/LALIGA/Alaves/THIRD.jpg" alt="Camiseta Deportivo Alavés">
                     <h4>Camiseta Alternativa</h4>
                     <p>23€</p>
                 </div>
@@ -198,12 +198,12 @@
             <h3>RCD Espanyol</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Español/HOME.jpg" alt="Camiseta RCD Espanyol">
+                    <img src="Imagenes/LALIGA/Espanol/HOME.jpg" alt="Camiseta RCD Espanyol">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Español/AWAY.jpg" alt="Camiseta RCD Espanyol">
+                    <img src="Imagenes/LALIGA/Espanol/AWAY.jpg" alt="Camiseta RCD Espanyol">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -266,12 +266,12 @@
             <h3>Leganés</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Leganés/HOME.jpg.webp" alt="Camiseta Leganés">
+                    <img src="Imagenes/LALIGA/Leganes/HOME.jpg.webp" alt="Camiseta Leganés">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Leganés/AWAY.jpg.webp" alt="Camiseta Leganés">
+                    <img src="Imagenes/LALIGA/Leganes/AWAY.jpg.webp" alt="Camiseta Leganés">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
