--- a/LaLiga.html
+++ b/LaLiga.html
@@ -266,7 +266,7 @@
             <h3>Leganés</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Leganes/HOME.jpg.webp" alt="Camiseta Leganés 1">
+                    <img src="Imagenes/LALIGA/Leganes/HOME.jpg.webp" alt="Camiseta Leganés">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
