--- a/Premier.html
+++ b/Premier.html
@@ -116,17 +116,17 @@
             <h3>Aston Villa</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Aston Villa/HOME.jpg" alt="Camiseta Aston Villa">
+                    <img src="Imagenes/PREMIER LEAGUE/ASTON VILLA/HOME.jpg" alt="Camiseta Aston Villa">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Aston Villa/AWAY (3).jpg" alt="Camiseta Aston Villa">
+                    <img src="Imagenes/PREMIER LEAGUE/ASTON VILLA/AWAY (3).jpg" alt="Camiseta Aston Villa">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Aston Villa/THIRD (5).jpg" alt="Camiseta Aston Villa">
+                    <img src="Imagenes/PREMIER LEAGUE/ASTON VILLA/THIRD (5).jpg" alt="Camiseta Aston Villa">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -138,12 +138,12 @@
                         <h3>AFC Bournemouth</h3>
                         <div class="productos">
                             <div class="producto">
-                                <img src="Imagenes/PREMIER LEAGUE/Bournemouth/HOME.jpg" alt="Camiseta Bournemouth">
+                                <img src="Imagenes/PREMIER LEAGUE/BOURNEMOUTH/HOME.jpg" alt="Camiseta Bournemouth">
                                 <h4>Camiseta Local</h4>
                                 <p>FAN: 23€ - PLAYER: 25€</p>
                             </div>
                             <div class="producto">
-                                <img src="Imagenes/PREMIER LEAGUE/Bournemouth/AWAY.jpg" alt="Camiseta Bournemouth">
+                                <img src="Imagenes/PREMIER LEAGUE/BOURNEMOUTH/AWAY.jpg" alt="Camiseta Bournemouth">
                                 <h4>Camiseta Visitante</h4>
                                 <p>FAN: 23€ - PLAYER: 25€</p>
                             </div>
@@ -155,12 +155,12 @@
             <h3>Brentford</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Brentford/HOME (5).jpg" alt="Camiseta Brentford">
+                    <img src="Imagenes/PREMIER LEAGUE/BRENTFORD/HOME (5).jpg" alt="Camiseta Brentford">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Brentford/AWAY.jpg" alt="Camiseta Brentford">
+                    <img src="Imagenes/PREMIER LEAGUE/BRENTFORD/AWAY.jpg" alt="Camiseta Brentford">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -172,12 +172,12 @@
                 <h3>Brighton & Hove Albion</h3>
                     <div class="productos">
                     <div class="producto">
-                        <img src="Imagenes/PREMIER LEAGUE/Brighton/HOME.jpg" alt="Camiseta Brighton & Hove Albion">
+                        <img src="Imagenes/PREMIER LEAGUE/BRIGHTON/HOME.jpg" alt="Camiseta Brighton & Hove Albion">
                         <h4>Camiseta Local</h4>
                         <p>FAN: 23€ - PLAYER: 25€</p>
                     </div>
                     <div class="producto">
-                        <img src="Imagenes/PREMIER LEAGUE/Brighton/AWAY (6).jpg" alt="Camiseta Brighton & Hove Albion">
+                        <img src="Imagenes/PREMIER LEAGUE/BRIGHTON/AWAY (6).jpg" alt="Camiseta Brighton & Hove Albion">
                         <h4>Camiseta Visitante</h4>
                         <p>FAN: 23€ - PLAYER: 25€</p>
                     </div>
@@ -188,17 +188,17 @@
                 <h3>Chelsea</h3>
                 <div class="productos">
                     <div class="producto">
-                        <img src="Imagenes/PREMIER LEAGUE/Chelsea/HOME (4).jpg" alt="Camiseta Chelsea Local">
+                        <img src="Imagenes/PREMIER LEAGUE/CHELSEA/HOME (4).jpg" alt="Camiseta Chelsea Local">
                         <h4>Camiseta Local</h4>
                         <p>FAN: 23€ - PLAYER: 25€</p>
                     </div>
                     <div class="producto">
-                        <img src="Imagenes/PREMIER LEAGUE/Chelsea/AWAY (2).jpg" alt="Camiseta Chelsea Visitante">
+                        <img src="Imagenes/PREMIER LEAGUE/CHELSEA/AWAY (2).jpg" alt="Camiseta Chelsea Visitante">
                         <h4>Camiseta Visitante</h4>
                         <p>FAN: 23€ - PLAYER: 25€</p>
                     </div>
                     <div class="producto">
-                        <img src="Imagenes/PREMIER LEAGUE/Chelsea/THIRD (4).jpg" alt="Camiseta Chelsea Alternativa">
+                        <img src="Imagenes/PREMIER LEAGUE/CHELSEA/THIRD (4).jpg" alt="Camiseta Chelsea Alternativa">
                         <h4>Camiseta Alternativa</h4>
                         <p>FAN: 23€ - PLAYER: 25€</p>
                     </div>
@@ -210,12 +210,12 @@
                 <h3>Crystal Palace</h3>
                 <div class="productos">
                     <div class="producto">
-                        <img src="Imagenes/PREMIER LEAGUE/Crystal Palace/HOME (6).jpg" alt="Camiseta Crystal Palace">
+                        <img src="Imagenes/PREMIER LEAGUE/CRYSTAL PALACE/HOME (6).jpg" alt="Camiseta Crystal Palace">
                         <h4>Camiseta Local</h4>
                         <p>FAN: 23€ - PLAYER: 25€</p>
                     </div>
                     <div class="producto">
-                        <img src="Imagenes/PREMIER LEAGUE/Crystal Palace/AWAY.jpg" alt="Camiseta Crystal Palace">
+                        <img src="Imagenes/PREMIER LEAGUE/CRYSTAL PALACE/AWAY.jpg" alt="Camiseta Crystal Palace">
                         <h4>Camiseta Visitante</h4>
                         <p>FAN: 23€ - PLAYER: 25€</p>
                     </div>
@@ -227,12 +227,12 @@
             <h3>Everton</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Everton/HOME.jpg" alt="Camiseta Everton">
+                    <img src="Imagenes/PREMIER LEAGUE/EVERTON/HOME.jpg" alt="Camiseta Everton">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Everton/AWAY.jpg" alt="Camiseta Everton">
+                    <img src="Imagenes/PREMIER LEAGUE/EVERTON/AWAY.jpg" alt="Camiseta Everton">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -244,12 +244,12 @@
             <h3>Fulham</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Fulham/HOME.jpg" alt="Camiseta Fulham">
+                    <img src="Imagenes/PREMIER LEAGUE/FULHAM/HOME.jpg" alt="Camiseta Fulham">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Fulham/AWAY (4).jpg" alt="Camiseta Fulham">
+                    <img src="Imagenes/PREMIER LEAGUE/FULHAM/AWAY (4).jpg" alt="Camiseta Fulham">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -261,12 +261,12 @@
             <h3>Ipswich Town</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Ipswich/HOME (7).jpg" alt="Camiseta Ipswich">
+                    <img src="Imagenes/PREMIER LEAGUE/IPSWICH/HOME (7).jpg" alt="Camiseta Ipswich">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Ipswich/AWAY (7).jpg" alt="Camiseta Ipswich">
+                    <img src="Imagenes/PREMIER LEAGUE/IPSWICH/AWAY (7).jpg" alt="Camiseta Ipswich">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -278,17 +278,17 @@
             <h3>Liverpool FC</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Liverpool/HOME (1).jpg" alt="Camiseta Liverpool FC">
+                    <img src="Imagenes/PREMIER LEAGUE/LIVERPOOL/HOME (1).jpg" alt="Camiseta Liverpool FC">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Liverpool/AWAY.jpg" alt="Camiseta Liverpool FC">
+                    <img src="Imagenes/PREMIER LEAGUE/LIVERPOOL/AWAY.jpg" alt="Camiseta Liverpool FC">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Liverpool/THIRD.jpg" alt="Camiseta Liverpool FC">
+                    <img src="Imagenes/PREMIER LEAGUE/LIVERPOOL/THIRD.jpg" alt="Camiseta Liverpool FC">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -300,12 +300,12 @@
             <h3>Leicester City</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Leicester/HOME.jpg" alt="Camiseta Leicester">
+                    <img src="Imagenes/PREMIER LEAGUE/LEICESTER/HOME.jpg" alt="Camiseta Leicester">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Leicester/AWAY (8).jpg" alt="Camiseta Leicester">
+                    <img src="Imagenes/PREMIER LEAGUE/LEICESTER/AWAY (8).jpg" alt="Camiseta Leicester">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -317,17 +317,17 @@
             <h3>Manchester City</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Manchester City/HOME (2).jpg" alt="Camiseta Manchester City">
+                    <img src="Imagenes/PREMIER LEAGUE/MANCHESTER CITY/HOME (2).jpg" alt="Camiseta Manchester City">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Manchester City/AWAY.jpg" alt="Camiseta Manchester City">
+                    <img src="Imagenes/PREMIER LEAGUE/MANCHESTER CITY/AWAY.jpg" alt="Camiseta Manchester City">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Manchester City/THIRD.jpg" alt="Camiseta Manchester City">
+                    <img src="Imagenes/PREMIER LEAGUE/MANCHESTER CITY/THIRD.jpg" alt="Camiseta Manchester City">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -339,17 +339,17 @@
             <h3>Manchester United</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Manchester United/HOME (3).jpg" alt="Camiseta Manchester United">
+                    <img src="Imagenes/PREMIER LEAGUE/MANCHESTER UNITED/HOME (3).jpg" alt="Camiseta Manchester United">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Manchester United/AWAY (1).jpg" alt="Camiseta Manchester United">
+                    <img src="Imagenes/PREMIER LEAGUE/MANCHESTER UNITED/AWAY (1).jpg" alt="Camiseta Manchester United">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Manchester United/THIRD (2).jpg" alt="Camiseta Manchester United">
+                    <img src="Imagenes/PREMIER LEAGUE/MANCHESTER UNITED/THIRD (2).jpg" alt="Camiseta Manchester United">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -361,17 +361,17 @@
             <h3>Newcastle United</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Newcastle/HOME.jpg" alt="Camiseta Newcastle United">
+                    <img src="Imagenes/PREMIER LEAGUE/NEWCASTLE/HOME.jpg" alt="Camiseta Newcastle United">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Newcastle/AWAY (9).jpg" alt="Camiseta Newcastle United">
+                    <img src="Imagenes/PREMIER LEAGUE/NEWCASTLE/AWAY (9).jpg" alt="Camiseta Newcastle United">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Newcastle/THIRD (6).jpg" alt="Camiseta Newcastle United">
+                    <img src="Imagenes/PREMIER LEAGUE/NEWCASTLE/THIRD (6).jpg" alt="Camiseta Newcastle United">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -383,12 +383,12 @@
             <h3>Nottingham Forest</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Nottingham Forest/HOME.jpg" alt="Camiseta Nottingham Forest">
+                    <img src="Imagenes/PREMIER LEAGUE/NOTTINGHAM FOREST/HOME.jpg" alt="Camiseta Nottingham Forest">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Nottingham Forest/AWAY.jpg" alt="Camiseta Nottingham Forest">
+                    <img src="Imagenes/PREMIER LEAGUE/NOTTINGHAM FOREST/AWAY.jpg" alt="Camiseta Nottingham Forest">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -400,12 +400,12 @@
             <h3>Southampton</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Southampton/HOME.jpg" alt="Camiseta Southampton">
+                    <img src="Imagenes/PREMIER LEAGUE/SOUTHAMPTON/HOME.jpg" alt="Camiseta Southampton">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Southampton/AWAY.jpg" alt="Camiseta Southampton">
+                    <img src="Imagenes/PREMIER LEAGUE/SOUTHAMPTON/AWAY.jpg" alt="Camiseta Southampton">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -417,17 +417,17 @@
             <h3>Tottenham Hotspur</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Tottenham/HOME.jpeg" alt="Camiseta Tottenham Hotspur">
+                    <img src="Imagenes/PREMIER LEAGUE/TOTTENHAM/HOME.jpeg" alt="Camiseta Tottenham Hotspur">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Tottenham/AWAY.jpg" alt="Camiseta Tottenham Hotspur">
+                    <img src="Imagenes/PREMIER LEAGUE/TOTTENHAM/AWAY.jpg" alt="Camiseta Tottenham Hotspur">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PREMIER LEAGUE/Tottenham/THIRD (3).jpg" alt="Camiseta Tottenham Hotspur">
+                    <img src="Imagenes/PREMIER LEAGUE/TOTTENHAM/THIRD (3).jpg" alt="Camiseta Tottenham Hotspur">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -439,12 +439,12 @@
                 <h3>West Ham United</h3>
                 <div class="productos">
                     <div class="producto">
-                        <img src="Imagenes/PREMIER LEAGUE/West Ham/HOME.jpeg" alt="Camiseta West Ham United">
+                        <img src="Imagenes/PREMIER LEAGUE/WEST HAM/HOME.jpeg" alt="Camiseta West Ham United">
                         <h4>Camiseta Local</h4>
                         <p>FAN: 23€ - PLAYER: 25€</p>
                     </div>
                     <div class="producto">
-                        <img src="Imagenes/PREMIER LEAGUE/West Ham/AWAY (5).jpg" alt="Camiseta West Ham United">
+                        <img src="Imagenes/PREMIER LEAGUE/WEST HAM/AWAY (5).jpg" alt="Camiseta West Ham United">
                         <h4>Camiseta Visitante</h4>
                         <p>FAN: 23€ - PLAYER: 25€</p>
                     </div>
